--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Assignment Solution for Module 2</title>
+</head>
+<body>
+    <h1>Our menu</h1>
+    <section id="noodle">
+        <h3>Noodle</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo cupiditate ea consectetur omnis, explicabo eaque esse accusantium aliquid tenetur adipisci obcaecati est dolor deserunt voluptas quibusdam voluptatem consequuntur odio doloribus?</p>
+    </section>
+    <section id="pasta">
+        <h3>Pasta</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, enim consequatur, eveniet magnam doloribus molestias repudiandae, ipsum aliquam nemo dolore amet? Vero laboriosam consequatur laudantium modi. Exercitationem error accusamus explicabo?</p>
+    </section>
+    <section id="pizza">
+        <h3>Pizza</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis repellendus, dolorum provident dicta officia voluptatem, beatae ad labore facere a accusamus, nemo voluptatibus? Id beatae repudiandae perferendis! Dolores, quo culpa.</p>
+    </section>
+</body>
+</html>
